[metadata]
name = ampapi
version = 1.1.5
author = Dylan Sperrer - p0t4t0sandwich - ThePotatoKing#3452
author_email = p0t4t0sandwich@gmail.com
description = A Python implemenation of the Cubecoders AMP API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/p0t4t0sandwich/ampapi-python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7
include_package_data = True
