[metadata]
name = ampapi
version = 1.3.16
author = Dylan Sperrer - p0t4t0sandwich - thepotatoking3452
author_email = p0t4t0sandwich@gmail.com
description = An API that allows you to communicate with AMP installations from within Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/p0t4t0sandwich/ampapi-py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7
include_package_data = True
